--- a/.gitignore
+++ b/.gitignore
@@ -76,6 +76,7 @@ modules.builtin
 # git files that we don't want to ignore even if they are dot-files
 #
 !.gitignore
+!.gitmodules
 !.mailmap
 !.cocciconfig
 
