--- a/arch/arm/configs/bb.org_defconfig
+++ b/arch/arm/configs/bb.org_defconfig
@@ -1,3 +1,4 @@
+CONFIG_LOCALVERSION="-bb.org"
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_KERNEL_LZO=y
 CONFIG_SYSVIPC=y
@@ -603,6 +604,15 @@ CONFIG_NFC_PN533_USB=m
 CONFIG_NFC_PN533_I2C=m
 CONFIG_NFC_MICROREAD_I2C=m
 CONFIG_NET_DEVLINK=m
+CONFIG_LEGO_DRIVERS=m
+# CONFIG_LEGOEV3_BOARD is not set
+# CONFIG_LEGOEV3_BLUETOOTH is not set
+CONFIG_WEDO=m
+CONFIG_FATCATLAB_EVB=m
+CONFIG_BOARD_INFO=m
+CONFIG_BONE_BOARD_INFO=m
+CONFIG_IIO_HRTIMER_TRIGGER_EV3DEV=m
+CONFIG_TI_ADS79XX_EV3DEV=m
 CONFIG_DEVTMPFS=y
 CONFIG_DEVTMPFS_MOUNT=y
 CONFIG_EXTRA_FIRMWARE="am335x-pm-firmware.elf am335x-bone-scale-data.bin am335x-evm-scale-data.bin am43x-evm-scale-data.bin"
@@ -914,7 +924,7 @@ CONFIG_IEEE802154_ATUSB=m
 CONFIG_IEEE802154_ADF7242=m
 CONFIG_INPUT_SPARSEKMAP=m
 CONFIG_INPUT_JOYDEV=m
-CONFIG_INPUT_EVDEV=m
+CONFIG_INPUT_EVDEV=y
 CONFIG_KEYBOARD_ADP5588=m
 CONFIG_KEYBOARD_ADP5589=m
 # CONFIG_KEYBOARD_ATKBD is not set
@@ -1080,7 +1090,7 @@ CONFIG_I2C_ROBOTFUZZ_OSIF=m
 CONFIG_I2C_TAOS_EVM=m
 CONFIG_I2C_TINY_USB=m
 CONFIG_SPI=y
-CONFIG_SPI_GPIO=m
+CONFIG_SPI_GPIO=y
 CONFIG_SPI_OMAP24XX=y
 CONFIG_SPI_TI_QSPI=y
 CONFIG_SPI_SPIDEV=m
@@ -1836,6 +1846,7 @@ CONFIG_LEDS_TLC591XX=m
 CONFIG_LEDS_LM355x=m
 CONFIG_LEDS_IS31FL319X=m
 CONFIG_LEDS_IS31FL32XX=m
+CONFIG_LEDS_USER=y
 CONFIG_LEDS_TRIGGER_TIMER=y
 CONFIG_LEDS_TRIGGER_ONESHOT=y
 CONFIG_LEDS_TRIGGER_DISK=y
@@ -2028,6 +2039,7 @@ CONFIG_EXTCON_GPIO=y
 CONFIG_EXTCON_USB_GPIO=y
 CONFIG_TI_EMIF=y
 CONFIG_IIO=y
+CONFIG_IIO_BUFFER_CB=y
 CONFIG_IIO_SW_DEVICE=m
 CONFIG_IIO_SW_TRIGGER=m
 CONFIG_BMA180=m
