--- a/arch/arm/configs/bb.org_defconfig
+++ b/arch/arm/configs/bb.org_defconfig
@@ -1993,7 +1993,7 @@ CONFIG_SPEAKUP_SYNTH_SOFT=m
 CONFIG_SPEAKUP_SYNTH_SPKOUT=m
 CONFIG_SPEAKUP_SYNTH_TXPRT=m
 CONFIG_SPEAKUP_SYNTH_DUMMY=m
-CONFIG_FB_TFT=m
+CONFIG_FB_TFT=y
 CONFIG_FB_TFT_AGM1264K_FL=m
 CONFIG_FB_TFT_BD663474=m
 CONFIG_FB_TFT_HX8340BN=m
@@ -2001,6 +2001,7 @@ CONFIG_FB_TFT_HX8347D=m
 CONFIG_FB_TFT_HX8353D=m
 CONFIG_FB_TFT_HX8357D=m
 CONFIG_FB_TFT_ILI9163=m
+CONFIG_FB_TFT_ILI9225=y
 CONFIG_FB_TFT_ILI9320=m
 CONFIG_FB_TFT_ILI9325=m
 CONFIG_FB_TFT_ILI9340=m
