--- a/arch/arm/configs/bb.org_defconfig
+++ b/arch/arm/configs/bb.org_defconfig
@@ -1952,7 +1952,7 @@ CONFIG_ADE7854=m
 CONFIG_AD2S90=m
 CONFIG_AD2S1200=m
 CONFIG_AD2S1210=m
-CONFIG_FB_TFT=m
+CONFIG_FB_TFT=y
 CONFIG_FB_TFT_AGM1264K_FL=m
 CONFIG_FB_TFT_BD663474=m
 CONFIG_FB_TFT_HX8340BN=m
@@ -1960,6 +1960,7 @@ CONFIG_FB_TFT_HX8347D=m
 CONFIG_FB_TFT_HX8353D=m
 CONFIG_FB_TFT_HX8357D=m
 CONFIG_FB_TFT_ILI9163=m
+CONFIG_FB_TFT_ILI9225=y
 CONFIG_FB_TFT_ILI9320=m
 CONFIG_FB_TFT_ILI9325=m
 CONFIG_FB_TFT_ILI9340=m
