Change from PREEMPT_RT to PREEMPT__LL
The realtime kernel breaks the ev3dev motor driver, so disable it.

Also, none of the other ev3dev kernels use the realtime patch set, so
this will be more consistent with the others.

Issue: ev3dev/ev3dev#795

--- a/arch/arm/configs/bb.org_defconfig
+++ b/arch/arm/configs/bb.org_defconfig
@@ -69,7 +69,7 @@ CONFIG_SMP=y
 CONFIG_MCPM=y
 CONFIG_NR_CPUS=2
 CONFIG_ARM_PSCI=y
-CONFIG_PREEMPT=y
+CONFIG_PREEMPT__LL=y
 CONFIG_HZ_250=y
 CONFIG_KSM=y
 CONFIG_FRONTSWAP=y
@@ -1974,7 +1974,6 @@ CONFIG_ASYNC_TX_DMA=y
 CONFIG_UIO=m
 CONFIG_UIO_PDRV_GENIRQ=m
 CONFIG_UIO_DMEM_GENIRQ=m
-CONFIG_UIO_PRUSS=m
 CONFIG_VIRT_DRIVERS=y
 CONFIG_VIRTIO_BALLOON=m
 CONFIG_VIRTIO_INPUT=m
