--- a/arch/arm/configs/bb.org_defconfig
+++ b/arch/arm/configs/bb.org_defconfig
@@ -609,7 +609,6 @@ CONFIG_WEDO=m
 CONFIG_FATCATLAB_EVB=m
 CONFIG_BOARD_INFO=m
 CONFIG_BONE_BOARD_INFO=m
-CONFIG_IIO_HRTIMER_TRIGGER_EV3DEV=m
 CONFIG_TI_ADS79XX_EV3DEV=m
 CONFIG_DEVTMPFS=y
 CONFIG_DEVTMPFS_MOUNT=y
@@ -2039,7 +2038,7 @@ CONFIG_TI_EMIF=y
 CONFIG_IIO=y
 CONFIG_IIO_BUFFER_CB=y
 CONFIG_IIO_SW_DEVICE=m
-CONFIG_IIO_SW_TRIGGER=m
+CONFIG_IIO_SW_TRIGGER=y
 CONFIG_BMA180=m
 CONFIG_BMA220=m
 CONFIG_BMC150_ACCEL=m
@@ -2209,6 +2208,7 @@ CONFIG_SENSORS_HMC5843_I2C=m
 CONFIG_SENSORS_HMC5843_SPI=m
 CONFIG_HID_SENSOR_INCLINOMETER_3D=m
 CONFIG_HID_SENSOR_DEVICE_ROTATION=m
+CONFIG_IIO_HRTIMER_TRIGGER=y
 CONFIG_IIO_INTERRUPT_TRIGGER=m
 CONFIG_IIO_SYSFS_TRIGGER=m
 CONFIG_DS1803=m
